# Ollama_Tools

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
experiments_and_snippets/: ollama_json_output.py  openai_ollama_compat_json_test.py
ollama_tools/: __init__.py  file_contents.py  file_dir.py  summarize_text.py  web_search.py
